fix: adjust spacing between method and request name in collections for clarity

--- a/src/renderer/src/components/layout/sideBar/Collections/Collections.module.css
+++ b/src/renderer/src/components/layout/sideBar/Collections/Collections.module.css
@@ -67,7 +67,7 @@
     transition: opacity 0.2s ease-in-out;
 
     .folderTitle {
-      padding: 0rem 0.7rem;
+      padding: 0rem 0.3rem;
       align-items: center;
       flex-grow: 1;
       white-space: nowrap;
@@ -146,6 +146,7 @@
     font-size: 0.6rem;
     font-weight: 600;
     min-width: 2rem;
+    padding-right: 0.4rem;
   }
 
   .requestName {
